packages/pulse-core/force-app/main/default/objects/Agent_Role__mdt/Agent_Role__mdt.object-meta.xml
<CustomObject>
    <label>Agent Role</label>
    <pluralLabel>Agent Roles</pluralLabel>
</CustomObject>