packages/pulse-core/force-app/main/default/objects/Agent_Role__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Inactive roles are hidden from pickers but stay resolvable for in-flight workflows that already reference them.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>