packages/pulse-core/force-app/main/default/objects/Agent_Role__mdt/fields/Default_Autonomy__c.field-meta.xml
<CustomField>
    <fullName>Default_Autonomy__c</fullName>
    <label>Default Autonomy</label>
    <description>Recommended autonomy level for this role. Action-level config can override.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Propose_Only</fullName>
                <label>Propose Only</label>
            </value>
            <value>
                <fullName>Act_With_Approval</fullName>
                <label>Act With Approval</label>
                <default>true</default>
            </value>
            <value>
                <fullName>Autonomous_Safe</fullName>
                <label>Autonomous (Safe Tools Only)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>