packages/pulse-core/force-app/main/default/objects/Agent_Role__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <description>One-line description shown in role pickers and library tab.</description>
    <type>LongTextArea</type>
    <length>1024</length>
</CustomField>