packages/pulse-core/force-app/main/default/objects/Agent_Role__mdt/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <label>Display Name</label>
    <description>Friendly name shown in pickers e.g. "Lease Coordinator".</description>
    <type>Text</type>
    <length>120</length>
</CustomField>