packages/pulse-core/force-app/main/default/objects/Agent_Role__mdt/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <label>Provider Name</label>
    <description>Which AI_Provider_Registration__mdt provider to call. Free-text so subscriber orgs can register custom providers; falls back to org default if blank.</description>
    <type>Text</type>
    <length>80</length>
</CustomField>