packages/pulse-core/force-app/main/default/objects/Agent_Role__mdt/fields/Role_Key__c.field-meta.xml
<CustomField>
    <fullName>Role_Key__c</fullName>
    <label>Role Key</label>
    <description>Unique identifier referenced from contract `agent.roleKey`. Lower_snake_case e.g. lease_coordinator.</description>
    <type>Text</type>
    <length>80</length>
    <unique>true</unique>
    <required>true</required>
</CustomField>