packages/pulse-core/force-app/main/default/objects/Agent_Role__mdt/fields/Suggested_Phase_Types__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Phase_Types__c</fullName>
    <label>Suggested Phase Types</label>
    <description>Comma-separated list of phase types this role suits e.g. "ai_driven,approval". UI hint only — not enforced at runtime.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>