packages/pulse-core/force-app/main/default/objects/Agent_Role__mdt/fields/System_Prompt__c.field-meta.xml
<CustomField>
    <fullName>System_Prompt__c</fullName>
    <label>System Prompt</label>
    <description>The curated system prompt baked into this role. Action-level promptAddendum is appended at runtime.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>