packages/pulse-core/force-app/main/default/objects/Agent_Role__mdt/fields/Tool_Allowlist_JSON__c.field-meta.xml
<CustomField>
    <fullName>Tool_Allowlist_JSON__c</fullName>
    <label>Tool Allowlist (JSON)</label>
    <description>JSON array of Workflow_Tool_Registration__mdt.Tool_Key__c values this role may call. Example: ["send_email","update_record"]. Blank/null = all registered tools allowed.</description>
    <type>LongTextArea</type>
    <length>4096</length>
</CustomField>